--- a/movies_scraping/imdb_10000_movies_webscrpaing.ipynb
+++ b/movies_scraping/imdb_10000_movies_webscrpaing.ipynb
@@ -532,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"D:\\projects\\ml\\movie_recommendation_system\\\\IMDB 10000 Movies Dataset.csv\")"
+    "df.to_csv(\"D:\\projects\\ml\\movie_recommendation_system\\\\movies_scraping\\\\IMDB 10000 Movies Dataset.csv\")"
    ]
   }
  ],
